# FlappyDXTK

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  generate.ps1
cmake/: Package.appxmanifest
dependencies/: CMakeLists.txt
source/: App.cpp  Main.cpp  Main.h  pch.h
source/common/: DeviceResources.cpp  DeviceResources.h  DirectXHelper.h
source/content/: Sample3DSceneRenderer.cpp  Sample3DSceneRenderer.h  SampleFpsTextRenderer.cpp  SampleFpsTextRenderer.h  SampleSpriteRenderer.cpp  SampleSpriteRenderer.h  ShaderStructures.h
